--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body{
   flex-wrap: wrap;
 }
 .box{
-  display: flex;
+  display:flex;
   justify-content: center;
   align-items: center;
   margin: 32px;
@@ -42,13 +42,13 @@ body{
   margin-right: 32px;
 }
 button{
+  width: 88px;
+  height: 36px;
   background-color: #007BFF;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  outline: none;
-  padding: 6px 24px;
-  appearance: none;
+  padding: 6px 12px;
   color: #FFFFFF;
 }
 .border{
